--- a/50_Lines.ipynb
+++ b/50_Lines.ipynb
@@ -6,7 +6,7 @@
       "name": "50_Lines.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNaJDbtOV0R1EoBzZgRHwbf",
+      "authorship_tag": "ABX9TyMLXAgvRPkhdh+uHmli+aNA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "  l=0\n",
         "  y = int(line*inp_shape[0]/lines_num)\n",
         "  for x in range(0, inp_shape[1]):\n",
-        "    # m = 1-\"the most intense color\". It's possible to bear one particalar color only (e.g. red - inp_img[y, x, 0])\n",
+        "    # m = 1-\"the most intense color\". It's can be particalar color only (e.g. red - inp_img[y, x, 0])\n",
         "    m = 1 - np.max(inp_img[y, x]) \n",
         "    for s in range(0, lines_amp + 1):      \n",
         "      out_img[y + int(np.sin(l * np.pi/2.) * lines_amp * decel(m)), x] = 0\n",
@@ -150,49 +150,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Sim4FcYDAnWc",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9ce4215f-70d1-4fc5-8c3a-771f10523a17"
-      },
-      "source": [
-        "inp_img[50, 50, 0]"
-      ],
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.69411767"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 23
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ojkFMZNqMHjE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
