--- a/50_Lines.ipynb
+++ b/50_Lines.ipynb
@@ -6,7 +6,7 @@
       "name": "50_Lines.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMLXAgvRPkhdh+uHmli+aNA",
+      "authorship_tag": "ABX9TyNsSaTTuzRBQshmqd7FHINJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,7 +84,7 @@
         "  l=0\n",
         "  y = int(line*inp_shape[0]/lines_num)\n",
         "  for x in range(0, inp_shape[1]):\n",
-        "    # m = 1-\"the most intense color\". It's can be particalar color only (e.g. red - inp_img[y, x, 0])\n",
+        "    # m = 1-\"the most intense color\". It can be particular color only (e.g. red - inp_img[y, x, 0])\n",
         "    m = 1 - np.max(inp_img[y, x]) \n",
         "    for s in range(0, lines_amp + 1):      \n",
         "      out_img[y + int(np.sin(l * np.pi/2.) * lines_amp * decel(m)), x] = 0\n",
