--- a/multicall_and_normal_rpc_mix.ipynb
+++ b/multicall_and_normal_rpc_mix.ipynb
@@ -11,12 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MakerDAO's Multicall Smart Contrats https://github.com/makerdao/multicall \n",
-    "JS original https://github.com/makerdao/multicall.js \n",
-    "Python port https://github.com/banteg/multicall.py \n",
+    "MakerDAO's Multicall Smart Contrats https://github.com/makerdao/multicall",
     "\n",
-    "Multical smartcontracts are not available on some blockchains, so below is demo of the combination of Multicall and Regular RPC methods. \n",
-    "Multicall contracs: \n",
+    "JS original https://github.com/makerdao/multicall.js",
+    "\n",
+    "Python port https://github.com/banteg/multicall.py",
+    "\n",
+    "Multical smartcontracts are not available on some blockchains, so below is demo of the combination of Multicall and Regular RPC methods.",
+    "\n",
+    "Multicall contracs:",
+    "\n",
     "https://github.com/banteg/multicall.py/blob/master/multicall/constants.py"
    ]
   },
