max calls(500) for a single multicall

--- a/multicall_and_normal_rpc_mix.ipynb
+++ b/multicall_and_normal_rpc_mix.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,16 +438,23 @@
     "\n",
     "out_df = out_df_native\n",
     "for blockchain in Endpoint.keys():\n",
-    "    df = out_df_init.loc[out_df_init['blockchain'] == blockchain].copy()\n",
+    "    df_b = out_df_init.loc[out_df_init['blockchain'] == blockchain].copy()\n",
     "    if ChainID[blockchain] in MULTICALL_ADDRESSES:\n",
-    "        try:\n",
-    "            df = get_multibalance(df, blockchain)\n",
-    "        except:\n",
-    "            df = get_token_balance(df)\n",
+    "        i=j=0\n",
+    "        df = pd.DataFrame()\n",
+    "        while i < len(df_b):\n",
+    "            i=j\n",
+    "            j=max(i+500,len(df_b)) #max 500 addresses in a multicall\n",
+    "            df_i=df.iloc[i:j,]\n",
+    "            try:\n",
+    "                df_i = get_multibalance(df_b, blockchain)\n",
+    "            except:\n",
+    "                df_i = get_token_balance(df_b)\n",
+    "            df = pd.concat([df,df_i], ignore_index = True)\n",
     "    else:\n",
-    "        df = get_token_balance(df)\n",
+    "        df_b = get_token_balance(df_b)\n",
     "    \n",
-    "    out_df = pd.concat([out_df, df], ignore_index = True)\n",
+    "    out_df = pd.concat([out_df, df_b], ignore_index = True)\n",
     "\n",
     "if len(out_df) == 0:\n",
     "    out_df.loc[len(out_df), ['error']] = ['empty']\n",
@@ -464,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +509,7 @@
        "      <th>0</th>\n",
        "      <td>NaN</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>641709818647583598</td>\n",
+       "      <td>638483926446615111</td>\n",
        "      <td>0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</td>\n",
        "      <td>ETH</td>\n",
        "      <td>0x188407eeD7B1bb203dEd6801875C0B5Cb1027053</td>\n",
@@ -612,7 +619,7 @@
        "      <th>11</th>\n",
        "      <td>TokenName2</td>\n",
        "      <td>18.0</td>\n",
-       "      <td>10531012465695751979369243</td>\n",
+       "      <td>10543280240702645340844828</td>\n",
        "      <td>0x6b175474e89094c44da98b954eedeac495271d0f</td>\n",
        "      <td>DAI</td>\n",
        "      <td>0x1e0447b19bb6ecfdae1e4ae1694b0c3659614e4e</td>\n",
@@ -632,7 +639,7 @@
        "      <th>13</th>\n",
        "      <td>TokenName4</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>124144042082847</td>\n",
+       "      <td>121621615865385</td>\n",
        "      <td>0x2791bca1f2de4661ed88a30c99a7a9449aa84174</td>\n",
        "      <td>USDC</td>\n",
        "      <td>0x1a13F4Ca1d028320A707D99520AbFefca3998b7F</td>\n",
@@ -652,7 +659,7 @@
        "      <th>15</th>\n",
        "      <td>TokenName4</td>\n",
        "      <td>6.0</td>\n",
-       "      <td>124144042082847</td>\n",
+       "      <td>121621615865385</td>\n",
        "      <td>0x2791bca1f2de4661ed88a30c99a7a9449aa84174</td>\n",
        "      <td>USDC</td>\n",
        "      <td>0x1a13F4Ca1d028320A707D99520AbFefca3998b7F</td>\n",
@@ -674,7 +681,7 @@
       ],
       "text/plain": [
        "   contract_name  decimals                     balance  \\\n",
-       "0            NaN      18.0          641709818647583598   \n",
+       "0            NaN      18.0          638483926446615111   \n",
        "1            NaN      18.0                           0   \n",
        "2            NaN      18.0                           0   \n",
        "3            NaN      18.0                           0   \n",
@@ -685,11 +692,11 @@
        "8     TokenName2      18.0                           0   \n",
        "9     TokenName3      18.0                           0   \n",
        "10    TokenName1      18.0                           0   \n",
-       "11    TokenName2      18.0  10531012465695751979369243   \n",
+       "11    TokenName2      18.0  10543280240702645340844828   \n",
        "12    TokenName3      18.0         8999999999999999997   \n",
-       "13    TokenName4       6.0             124144042082847   \n",
+       "13    TokenName4       6.0             121621615865385   \n",
        "14    TokenName5       6.0                      200000   \n",
-       "15    TokenName4       6.0             124144042082847   \n",
+       "15    TokenName4       6.0             121621615865385   \n",
        "16    TokenName5       6.0                      200000   \n",
        "\n",
        "                              contract_address contract_ticker_symbol  \\\n",
