minor comment fix

--- a/EVM_logs_decode.ipynb
+++ b/EVM_logs_decode.ipynb
@@ -643,7 +643,7 @@
     "\n",
     "#pull all the logs from an address\n",
     "logs = w3.eth.get_logs({\"address\": contract_address\n",
-    "                       #,\"topics\":[NewTransmission_topic] #optional if we suppress mismatch errors\n",
+    "                       #,\"topics\":[NewTransmission_topic] #optional filter\n",
     "                       ,\"fromBlock\": w3.eth.get_block('latest')['number'] - 1000 # last 1000 blocks\n",
     "                       ,\"toBlock\": 'latest'\n",
     "                       })\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4ee7234b",
+   "id": "d57c050f",
    "metadata": {},
    "outputs": [
     {
